添加根目录选择和Url解析功能

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -182,7 +182,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>./</string>
+     <string>D:/D_Desktop/www</string>
     </property>
    </widget>
    <widget class="QPushButton" name="SelectRootDirBtn">
